# Magisterka

./: .gitignore
PRiR/Zadanie 1/: CMakeLists.txt  RandomNumberGenerator.h  Simulation.cpp  Simulation.h  SimulationS.cpp  SimulationS.h  main.cpp
PRiR/Zadanie 2/main/: Board.java  Optimizer.java  Pawn.java
PRiR/Zadanie 2/src/: Board.java  BoardInterface.java  ExampleBoard.java  Optimizer.java  OptimizerInterface.java  Pawn.java  PawnInterface.java
PRiR/Zadanie 2/test/: BoardTest.java  TestBoard.java
PRiR/Zadanie 3/src/: Converter.java  ConverterInterface.java  RemoteConverterInterface.java  Server.java  Start.java  User.java
PRiR/Zadanie 3/test/: RemoteConverterTest.java
PRiR/Zadanie 4/: Simulation.cpp  Simulation.h  SimulationS.cpp  SimulationS.h  main.cpp
Projektowanie wspomagane komputerem/Zadanie 1/: CMakeLists.txt  EnergyCalculator.cpp  EnergyCalculator.h  Helper.cpp  Helper.h  MonteCarlo.cpp  MonteCarlo.h  MyMPI.cpp  MyMPI.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Simulation.cpp  Simulation.h  main.cpp  mpiusage.cpp  mpiusage.h
Projektowanie wspomagane komputerem/Zadanie 2/main/: Board.java  Optimizer.java  OptimizerInterface.java  Pawn.java  PawnInterface.java
Skrypty/: kolko.sh
Skrypty/ChatBot/resources/: training.json
Skrypty/Python/: app.py  bot.py  crawler.py
Statystyka/Zestaw1/: A1.py  A2.py
Statystyka/Zestaw2/: A.py  B.py
Statystyka/Zestaw4/: A.py  B.py
main/: Board.java  BoardInterface.java  LockOptimizer.java  Optimizer.java  OptimizerInterface.java  Pawn.java  PawnInterface.java
test/: TestBoard.java
(+11 files in other folders)
